--- a/app/templates/common/filter.jade
+++ b/app/templates/common/filter.jade
@@ -4,22 +4,22 @@
 			li.pagination-item.active
 				span 1
 			li.pagination-item
-				a(href="#").pagination-link 2
+				a(href="javascript://").pagination-link 2
 			li.pagination-item
-				a(href="#").pagination-link 3
+				a(href="javascript://").pagination-link 3
 			li.pagination-item
-				a(href="#").pagination-link 4
+				a(href="javascript://").pagination-link 4
 			li.pagination-item
-				a(href="#").pagination-link 5
+				a(href="javascript://").pagination-link 5
 			li.pagination-item.all
-				a(href="#").pagination-link Все
+				a(href="javascript://").pagination-link Все
 	.marking-toggle
 		//- select.marking-toggle__select
 		//- 	option(selected="selected", value="grid") Сеткой
 		//- 	option(value="lines") Линиями
 
 
-		.dropdown-ninja#dd 
+		.dropdown-ninja
 			span.dropdown-placeholder(data-index="") Сеткой
 			ul.dropdown
 				li: a(href="javascript://") Сеткой
