--- a/app/fonts/fonts.css
+++ b/app/fonts/fonts.css
@@ -1,41 +1,11 @@
 
 @font-face {
     font-family: 'elektra_light_probold';
-    src: url('font-webfont.eot');
-    src: url('font-webfont.eot?#iefix') format('embedded-opentype'),
-         url('font-webfont.woff') format('woff'),
-         url('font-webfont.ttf') format('truetype'),
-         url('font-webfont.svg#elektra_light_probold') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-
-
-@font-face {
-    font-family: 'elektra_light_proregular';
-    src: url('ElektraLightPro.eot');
-    src: url('ElektraLightPro.eot?#iefix') format('embedded-opentype'),
-         url('ElektraLightPro.woff') format('woff'),
-         url('ElektraLightPro.ttf') format('truetype'),
-         url('ElektraLightPro.svg#elektra_light_proregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-
-
-
-@font-face {
-    font-family: 'elektra_medium_proitalic';
-    src: url('elektra_medium_pro_italic-webfont.eot');
-    src: url('elektra_medium_pro_italic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('elektra_medium_pro_italic-webfont.woff2') format('woff2'),
-         url('elektra_medium_pro_italic-webfont.woff') format('woff'),
-         url('elektra_medium_pro_italic-webfont.ttf') format('truetype'),
-         url('elektra_medium_pro_italic-webfont.svg#elektra_medium_proitalic') format('svg');
+    src: url('font-web.eot');
+    src: url('font-web.eot?#iefix') format('embedded-opentype'),
+         url('font-web.woff2') format('woff2'),
+         url('font-web.woff') format('woff'),
+         url('font-web.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 
@@ -46,12 +16,41 @@
 
 @font-face {
     font-family: 'elektra_medium_proregular';
-    src: url('elektra_medium_pro-webfont.eot');
-    src: url('elektra_medium_pro-webfont.eot?#iefix') format('embedded-opentype'),
-         url('elektra_medium_pro-webfont.woff2') format('woff2'),
-         url('elektra_medium_pro-webfont.woff') format('woff'),
-         url('elektra_medium_pro-webfont.ttf') format('truetype'),
-         url('elektra_medium_pro-webfont.svg#elektra_medium_proregular') format('svg');
+    src: url('elektra_medium_pro-web.eot');
+    src: url('elektra_medium_pro-web.eot?#iefix') format('embedded-opentype'),
+         url('elektra_medium_pro-web.woff2') format('woff2'),
+         url('elektra_medium_pro-web.woff') format('woff'),
+         url('elektra_medium_pro-web.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'elektra_medium_proitalic';
+    src: url('elektra_medium_pro_italic-web.eot');
+    src: url('elektra_medium_pro_italic-web.eot?#iefix') format('embedded-opentype'),
+         url('elektra_medium_pro_italic-web.woff2') format('woff2'),
+         url('elektra_medium_pro_italic-web.woff') format('woff'),
+         url('elektra_medium_pro_italic-web.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'elektra_light_proregular';
+    src: url('elektra_light_pro-web.eot');
+    src: url('elektra_light_pro-web.eot?#iefix') format('embedded-opentype'),
+         url('elektra_light_pro-web.woff2') format('woff2'),
+         url('elektra_light_pro-web.woff') format('woff'),
+         url('elektra_light_pro-web.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 
